# mind-sw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  env.sh  setup.sh
DicomToVolume-1.0/: CMakeLists.txt  dcm2mhd.cxx
MindSW-1.0.0/include/ITK-5.1/: ITKColormapExport.h  ITKConvolutionExport.h  ITKDeformableMeshExport.h  ITKDenoisingExport.h  ITKDiffusionTensorImageExport.h  ITKFFTExport.h  ITKFastMarchingExport.h  ITKImageFeatureExport.h  ITKImageIntensityExport.h  ITKMarkovRandomFieldsClassifiersExport.h  ITKPDEDeformableRegistrationExport.h  ITKQuadEdgeMeshFilteringExport.h  ITKRegionGrowingExport.h  ITKRegistrationMethodsv4Export.h  ITKSmoothingExport.h  gdcmConfigure.h  itkConfigure.h  itk_compiler_detection.h  itk_eigen.h  vcl_where_root_dir.h  vxl_config.h
MindSW-1.0.0/include/ITK-5.1/compilers/: ITK_COMPILER_INFO_AppleClang_CXX.h
MindSW-1.0.0/include/ITK-5.1/itkhdf5/: H5pubconf.h
MindSW-1.0.0/lib/: libhdf5.settings
MindSW-1.0.0/lib/cmake/: itkLIBMINCConfig.cmake
MindSW-1.0.0/lib/cmake/ITK-5.1/: ITKConfig.cmake  ITKConfigVersion.cmake  ITKTargets-release.cmake  ITKTargets.cmake
MindSW-1.0.0/lib/cmake/ITK-5.1/Modules/: ITKAnisotropicSmoothing.cmake  ITKAntiAlias.cmake  ITKBiasCorrection.cmake  ITKBinaryMathematicalMorphology.cmake  ITKClassifiers.cmake  ITKColormap.cmake  ITKCommon.cmake  ITKConvolution.cmake  (+133 more)
MindSW-1.0.0/lib/pkgconfig/: hdf5-1.10.4.pc  hdf5_cpp-1.10.4.pc  libopenjp2.pc
MindSWCore-1.0/: CMakeLists.txt
MindSWMain/: CMakeLists.txt
MindSWMain-1.0/: CMakeLists.txt
MindSWMain-1.0/DicomToVolume-1.0/: CMakeLists.txt  dcm2volume.cxx
